# tiktok_scraper_distributed

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
backup/: fyp_scraper.py  profile_scraper.py
fyp_scraper/: fyp_scraper.py  main.py  save.json  test.py  test.txt
fyp_scraper/tiktok_video_metadata/: 7519198734693960978.json  7538849964982537494.json  7539866933991116040.json  7540081341501689119.json  7542127398154751254.json  7542926004373818646.json  7549300010140060941.json  7550077042495163662.json  7557296422819745046.json  7560756174191103240.json  7560856530669653303.json  7562215664874753297.json  7564867093414432022.json  7565590126068305183.json  7565820708824108309.json  7565985470664969494.json  7566801037428886805.json  7566998093862931767.json  7567377506991410446.json  7567747867092241665.json  7567829727117970699.json  7567997433481923848.json  7568029139010161932.json  7568508963696692481.json
profile_scraper/: capture_session.py  capture_session_test.py  celery_config.py  main.py  params.txt  profile_scraper.py  profile_scraper_v2.py  profile_scraper_v3.py  profile_scraper_v4.py  profile_scraper_v5.py  tasks.py  test.py
shared/: models.py  proxy.py  storage.py
tests/: __init__.py  conftest.py  test_fyp_scraper.py  test_profile_scraper.py  test_proxy.py  test_storage.py  test_tasks.py  test_video_downloader.py
tests/integration/: __init__.py  test_redis_integration.py
video_downloader/: celery_config.py  main.py  video_downloader.py
