[project]
name = "tiktok-scraper-distributed"
version = "1.0.0"
description = "Distributed TikTok scraper with profile scraping, FYP discovery, and video downloading"
readme = "README.md"
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "-ra",
    "--strict-markers",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["shared", "profile_scraper", "fyp_scraper", "video_downloader"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/venv_wsl/*",
    "*/.git/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py39"
line-length = 120
exclude = [
    ".git",
    "__pycache__",
    "venv",
    "venv_wsl",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip without explicit strict
    "E402",  # module level import not at top of file
    "F401",  # imported but unused (common in __init__.py)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011", "B017"]

[tool.ruff.lint.isort]
known-first-party = ["shared", "profile_scraper", "fyp_scraper", "video_downloader"]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "venv",
    "venv_wsl",
    "__pycache__",
    "tests",
]

[[tool.mypy.overrides]]
module = [
    "redis.*",
    "celery.*",
    "boto3.*",
    "botocore.*",
    "playwright.*",
    "patchright.*",
    "curl_cffi.*",
    "yt_dlp.*",
]
ignore_missing_imports = true

